# DAVINCI

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  simulation_report_1755214001.txt  simulation_report_1755214161.txt  simulation_report_1755255706.txt  test_compile
include/: Config.h  HFTMarketMaker.h  MarketMaker.h  Order.h  OrderBook.h  PnLCalculator.h  PriceGenerator.h  SimulationEngine.h  Utils.h
python_analytics/: analyze_results.py  requirements.txt
src/: MarketMaker.cpp  Order.cpp  OrderBook.cpp  PnLCalculator.cpp  PriceGenerator.cpp  SimulationEngine.cpp  main.cpp  test_basic.cpp  utils.cpp
